# i3ds-wisdom

./: CMakeLists.txt  README.md  i3ds_configure_wisdom.cpp  main.cpp  wisdom_ack_service.cpp  wisdom_client.cpp  wisdom_client.hpp  wisdom_i3ds_wrapper.cpp  wisdom_i3ds_wrapper.hpp
